# AffinityServiceRust

./: .gitignore  .rustfmt.toml  AGENT.md  CONTRIBUTING.md  Cargo.toml  DEBUG.md  README.md  README.zh-CN.md  README_src_outline.md  SYMBOL_RESOLUTION_SUCCESS.md  TEST_RESULTS_SYMBOL_RESOLVE.md  blacklist.ini  build.rs  config.ini  index.crates.io  process_logs.ps1  project_specific_agent.md  src_outline.md
agent_external_tool_docs/: ddgr.md  es.md  github-api-limits.md  tesseract.md
config/: blacklist.ini  config.ini
docs/: README.md  SYMBOL_RESOLUTION.md  TEST_SYMBOL_RESOLVE.md  apply.md  cli.md  config.md  error_codes.md  es.md  imagemagick.md  logging.md  main.md  priority.md  process.md  scheduler.md  sed-perl-awk.md  winapi.md
docs/en-US/: README.md  config.md  main.md  priority.md  scheduler.md  winapi.md
docs/en-US/apply.rs/: ApplyConfigResult.md  README.md  apply_affinity.md  apply_ideal_processors.md  apply_io_priority.md  apply_memory_priority.md  apply_prime_threads.md  apply_prime_threads_demote.md  apply_prime_threads_promote.md  apply_prime_threads_select.md  apply_priority.md  apply_process_default_cpuset.md  get_handles.md  log_error_if_new.md  (+3 more)
docs/zh-CN/: README.md  apply.md  cli.md  config.md  error_codes.md  logging.md  main.md  priority.md  process.md  scheduler.md  winapi.md
scripts/: clean imports.sh  clippy_fix.sh  generate_outline.sh  generate_outline_single.sh
src/: apply.rs  cli.rs  collections.rs  config.rs  error_codes.rs  event_trace.rs  logging.rs  main.rs  priority.rs  process.rs  scheduler.rs  win32_error_codes.rs  winapi.rs
(+291 files in other folders)
