[package]
name = "AffinityServiceRust"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.0", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_SystemInformation"] }
chrono = "0.4.42"
once_cell = "1.21.3"