[package]
name = "AffinityServiceRust"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
ntapi = "0.4.1"
once_cell = "1.21.3"
regex = "1.12.2"
windows = { version = "0.62.2", features = ["Win32", "Win32_Foundation", "Win32_Security","Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp","Win32_System_ProcessStatus","Win32_System_SystemInformation","Win32_System_Threading","Win32_System_WindowsProgramming"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
